--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Menú Dulce Hora</title>
 </head>
 <body>
-    <iframe src="menu.pdf" style="width:100%; height:100vh;" frameborder="0"></iframe>
+    <img src="1.jpg" alt="Imagen 1" style="width:100%; display:block; margin-bottom:20px;">
+    <img src="2.jpg" alt="Imagen 2" style="width:100%; display:block; margin-bottom:20px;">
+    <img src="3.jpg" alt="Imagen 3" style="width:100%; display:block; margin-bottom:20px;">
 </body>
 </html>
