--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Dulce Hora</title>
+    <title>Menú Visualizado como Página Web</title>
 </head>
 <body>
     <img src="1.jpg" alt="Imagen 1" style="width:100%; display:block; margin-bottom:20px;">
